src/App.css
html,
body {
  overflow-x: hidden;
  padding-bottom: 50px;
}

html {
  background-color: var(--bone);
  --bone: #FFFCF2;
  --light-brown: #403D39;
  --lightest-brown: #504C47;
  --orange: #EB5E28;
  font-family: 'Roboto', sans-serif;
  scroll-behavior: smooth;
}

body {
  animation: transistionIn 1.5s;
}

@keyframes transistionIn {
  from {
    opacity: 0;
    transform: translateY(-100px);
    filter: grayscale(100%);
  }

  to {
    opacity: 100;
    transform: translateY(0px);
    filter: grayscale(0%);
  }
}


.App {
  padding: 0 40px;
}

.navbar {
  display: flex;
  height: 100px;
  align-items: center;
  justify-content: space-between;
}



.main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  font-size: large;
  margin-top: 5px;
  color: var(--orange);
  gap: 25px;
  margin: auto;
  max-width: 750px;
  min-height: 70vh;
  box-sizing: inherit;
}

.links {
  display: flex;
  flex-direction: row;
  gap: 20px;
  align-items: center;
}

.logo {
  color: var(--orange);
  transition: .5s ease;
}

.links section {
  display: inline-flex;
  margin-right: 3px;
  color: var(--orange);
}

.links a {
  text-decoration: none;
  color: var(--light-brown);
  transition: .5s ease;
}

.intro {
  font-size: 25px;
}

.name {
  color: var(--lightest-brown);
  font-size: 65px;
  transition: .25s ease;
}

.info {
  color: var(--light-brown);
  font-size: 55px;
}

.description p {
  color: var(--light-brown);
  padding: 0;
  margin: 0;
  max-width: 550px;
}

button {
  color: var(--orange);
  padding: 10px 15px;
  border-radius: 10%;
  background-color: var(--navy);
  border: 1px solid var(--orange);
  transition: .5s ease;
}
.email button {
  padding: 10px 30px;

}

#aboutMe,
#projects,
#work,
#contactMe {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  max-width: 750px;
  margin: auto;
  margin-top: 300px;
}

.about section,
.projects section,
.work-experiences section,
.contact section {
  color: var(--orange);
}

.about,
.projects,
.work-experiences,
.contact {
  display: inline-flex;
  align-items: center;
  gap: 5px;
  color: var(--light-brown);
  font-size: 45px;
}

.aboutMe {
  color: var(--orange);
}

.aboutMe.skills {
  display: flex;
  gap: 20px;
  padding: 5px;
}

.aboutMe.skills img {
  width: 85px;
  height: auto;
  transition: .5s ease;
}



.aboutMe.container {
  display: flex;
  flex-direction: row;
  gap: 100px;
}

.aboutMe.text {
  max-width: 750px;
}

.aboutMe.intro,
.aboutMe.exp,
.projects-container {
  color: var(--lightest-brown);
  font-size: 18px;
  line-height: 1.6;
}

.aboutMe.pic {
  margin: auto;
}


.projects-intro {
  color: var(--lightest-brown);
  max-width: 750px;
  font-size: 20px;
  line-height: 1.6;
}
#work {
  gap: 20px;
}
.time {
  color: var(--orange);
  padding-top: 15px;
  margin-bottom: 5px;

}
.company {
  color: var(--light-brown);
  font-size: 35px;
  font-weight: bold;
  margin-top: 5px;
  margin-bottom: 15px;
  transition: .5s ease;
  text-decoration: underline;
  cursor: pointer;
}
.work-des,
.contactInfo {
  color: var(--lightest-brown);
  font-size: 20px;
  line-height: 1.6;
}
.work-des {
  border-bottom: 2px solid var(--dark-slate);

}
.projects-container {
  max-width: 750px;
  margin-top: 20px;
  list-style: none;
}

.projects-container section {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.projects-container section img {
  width: 45px;
  height: auto;
  margin-right: 80px;
  padding: 4px;
  border: 0px;
  transition: .5s ease;
}
.contact-container img {
  width: 45px;
  height: auto;
  padding: 4px;
  border: 0px;
  transition: .5s ease;
}



.projects-container a {
  font-size: 38px;
  font-weight: bold;
  color: var(--lightest-brown);
  text-decoration: underline;
  transition: .5s ease;
}

.projects-container ul {
  margin: 0px;
  padding-inline: 0px;
}

.projects-container p {
  color: var(--lightest-brown);
  font-size: 20px;
  line-height: 1.2;
}

.sorting,
.fec,
.recastly,
.csgo,
.contact-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 100px;
}

.sortingSS,
.fecSS,
.recastlySS,
.csgoSS,
.photo {
  object-fit: cover;
  width: 215px;
  height: 215px;
  transition: .5s ease;
}



.photo {
  object-fit: cover;
  object-position: 0% 0%;
}

.fecSS {
  object-fit: cover;
  object-position: 28%;
}

.logo {
  width: 75px;
}


.icon {
  display: none;
}
.contactInfoLinks {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 25px;
}


.hidden {
  opacity: 0;
  filter: blur(5px);
  transition: all 1s;
  filter: grayscale(100%);
}
.show {
  opacity: 1;
  filter: blur(0);
  filter: grayscale(0);

}

@media(prefers-reduced-motion) {
  .hidden {
    transition: none;
  }
}

@media only screen and (max-width: 650px) {
  body {
    text-align: center;
  }

  img {
    margin: auto;
  }

  .main {
    align-items: center;
  }

  .aboutMe.skills {
    flex-wrap: wrap;
    justify-content: center;
  }

  #aboutMe,
  #projects,
  #work,
  #contactMe {
    margin: 10px;
    display: block;
  }
  .email button {
    padding: 10px 10px;
  }

  .about,
  .projects,
  .work-experiences,
  .contact {
    font-size: 30px;
    margin: auto;
  }

  .sorting,
  .fec,
  .recastly,
  .csgo,
  .contact-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    margin-bottom: 10px;
  }

  .icon {
    text-decoration: none;
  }

  .projects-container section {
    display: flex;
    gap: 15px;
    flex-direction: column;
    margin: auto;
  }

  .projects-container section img {
    margin: 0px;
  }

  .projects-container a {
    font-size: 35px;
    color: var(--orange);
  }

}

@media screen and (max-width: 650px) {
  .navbar {
    justify-content: space-between;
    align-items: center;
  }

  .navbar button {
    display: none;
  }

  .navbar a {
    display: none;
  }

  .navbar a.icon {
    float: right;
    display: flex;
    color: var(--orange);
    font-size: 40px;
  }

  .logo {
    margin: 0px;
  }
  .projects-container section img,
  .github img {
    -webkit-filter: drop-shadow(1.5px 1.5px 0 var(--orange)) drop-shadow(-1.5px -1.5px 0 var(--orange));
    filter: drop-shadow(1.5px 1.5px 0 var(--orange)) drop-shadow(-1.5px -1.5px 0 var(--orange));
  }
  .projectDesc {
    margin-bottom: 5px;
  }
}

@media screen and (max-width: 650px) {
  .navbar.responsive {
    position: relative;
    display: flex;
  }

  .links.responsive {
    display: flex;
    flex-direction: column;
    background-color: var(--dark-navy);
    padding: 20px;
    position: absolute;
    right: 0px;
    top: 75px;
    gap: 35px;
    transition: .5s ease;
    border: 1px solid var(--orange);
    width: 75px;
    z-index: 2;
  }

  .links.responsive a {
    display: flex;
  }
}

@media only screen and (min-width: 650px) {

  .navbar a:hover {
    transition: .5s ease;
    font-size: 25px;
  }
  .logo:hover,
  button:hover {
    transition: .5s ease;
    transform: scale(1.4);
  }

  button:hover,
  a:hover,
  img:hover {
    cursor: pointer;
  }

  .JS:hover img,
  .CSS:hover img,
  .HTML:hover img,
  .reactImg:hover img,
  .SQL:hover img,
  .Mongo:hover img,
  .AWS:hover img {
    cursor: pointer;
    transition: ease .5s;
    width: 120px;
    height: auto;
  }

  .projects-container section img:hover,
  .github img:hover {
    transition: .5s ease;
    transform: scale(1.5);
    -webkit-filter: drop-shadow(1.5px 1.5px 0 var(--orange)) drop-shadow(-1.5px -1.5px 0 var(--orange));
    filter: drop-shadow(1.5px 1.5px 0 var(--orange)) drop-shadow(-1.5px -1.5px 0 var(--orange));
  }
  .linkedin img:hover {
    transition: .5s ease;
    transform: scale(1.5);
  }

  .projects-container a:hover,
  .company:hover {
    font-size: 45px;
    font-weight: bold;
    color: var(--orange);
    text-decoration: underline;
    transition: .25s ease;
  }

  .sortingSS:hover,
  .fecSS:hover,
  .recastlySS:hover,
  .csgoSS:hover,
  .photo:hover {
    cursor: pointer;
    float: right;
    transform: scale(1.25);
    transition: .5s ease;
  }

  .logo:hover {
    cursor: pointer;
    transform: scale(1.5);

  }

  .name:hover {
    cursor: pointer;
    transform: scale(2);
    transform-origin: 0%;
    transition: .5s ease;
    color: var(--orange);
  }


}

@media screen and (max-width: 800px) {
  .aboutMe.skills {
    flex-wrap: wrap;
  }
}

